--- a/AddressBook/Content/Site.css
+++ b/AddressBook/Content/Site.css
@@ -1,24 +1,25 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    font-size: 13px;
+    font-family: Verdana, Arial, Helvetica, Sans-Serif;
+    background-color: #f7f7fa;
+    padding-left: 40px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+table {
+    vertical-align: middle;
+    text-align: left;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.header {
+    font-weight: bold;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+td {
+    padding-right: 10px;
+}
+
+input {
+    width: 100px;
+    height: 30px;
+    font-weight: bold;
 }
