--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -1,31 +1,27 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<AddressBook.Models.Address>
+@{
+    ViewBag.Title = "Адресная книга";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<div>
+    <input type="submit" value="Добавить" />
+    <table>
+        <tr class="header">
+            <td><p>Страна</p></td>
+            <td><p>Город</p></td>
+            <td><p>Улица</p></td>
+            <td><p>№ дома</p></td>
+            <td><p>Дата создания записи<p></td>
+        </tr>
+        @foreach(AddressBook.Models.Address address in Model)
+        {
+            <tr>
+                <td><p>@address.Country<p></td>
+                <td><p>@address.City</p></td>
+                <td><p>@address.Street</p></td>
+                <td><p>@address.HouseNumber</p></td>
+                <td><p>@address.Date.ToLongDateString()</p></td>
+            </tr>
+        }
+    </table>
 </div>
