--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -9,5 +9,7 @@
 </head>
 <body>
     @RenderBody()
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/ajax")
 </body>
 </html>
