--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -5,23 +5,31 @@
 
 <div>
     <input type="submit" value="Добавить" />
+    @using (Ajax.BeginForm("UpdateAdresses", new AjaxOptions { UpdateTargetId = "results" }))
+    {
+        <input type="submit" value="Обновить" />
+    }
     <table>
-        <tr class="header">
-            <td><p>Страна</p></td>
-            <td><p>Город</p></td>
-            <td><p>Улица</p></td>
-            <td><p>№ дома</p></td>
-            <td><p>Дата создания записи<p></td>
-        </tr>
-        @foreach(AddressBook.Models.Address address in Model)
-        {
-            <tr>
-                <td><p>@address.Country<p></td>
-                <td><p>@address.City</p></td>
-                <td><p>@address.Street</p></td>
-                <td><p>@address.HouseNumber</p></td>
-                <td><p>@address.Date.ToLongDateString()</p></td>
+        <thead>
+            <tr class="header">
+                <td><p>Страна</p></td>
+                <td><p>Город</p></td>
+                <td><p>Улица</p></td>
+                <td><p>№ дома</p></td>
+                <td><p>Дата создания записи<p></td>
             </tr>
-        }
+        </thead>
+        <tbody id="results">
+            @foreach (AddressBook.Models.Address address in Model)
+            {
+                <tr>
+                    <td><p>@address.Country<p></td>
+                    <td><p>@address.City</p></td>
+                    <td><p>@address.Street</p></td>
+                    <td><p>@address.HouseNumber</p></td>
+                    <td><p>@address.Date.ToLongDateString()</p></td>
+                </tr>
+            }
+        </tbody>
     </table>
 </div>
