--- a/AddressBook/Content/Site.css
+++ b/AddressBook/Content/Site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿/*
+body {
     font-size: 13px;
     font-family: Verdana, Arial, Helvetica, Sans-Serif;
     background-color: #f7f7fa;
@@ -10,7 +11,7 @@ table {
     text-align: left;
 }
 
-.header {
+thead {
     font-weight: bold;
 }
 
@@ -23,3 +24,4 @@ input {
     height: 30px;
     font-weight: bold;
 }
+*/
