Async added data

--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -4,16 +4,17 @@
 
 <div>
 
-    <!-- Button trigger modal -->
+    <!-- Кнопка добавления -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
         Добавить
     </button>
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            @using (Ajax.BeginForm("UpdateAdresses", new AjaxOptions { UpdateTargetId = "results" }))
-            {
+    <!-- Модальное окно -->
+    @using (Ajax.BeginForm("UpdateAdresses", new AjaxOptions { UpdateTargetId = "results" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLongTitle">Добавление новой записи</h5>
@@ -43,26 +44,16 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-                        <button type="submit" class="btn btn-primary" disabled>Сохранить</button>
+                        <button type="submit" class="btn btn-primary">Сохранить</button>
                     </div>
                 </div>
-            }
-        </div>
-    </div>
-
-
-    <div class="btn-group" role="group">
-        <input type="submit" class="btn btn-default" value="Добавить" />
-        @using (Ajax.BeginForm("UpdateAdresses", new AjaxOptions { UpdateTargetId = "results" }))
-        {
-            <div></div>
-            <div>
-                <input type="submit" class="btn btn-default" value="Обновить" />
             </div>
-        }
-    </div>
+        </div>
+    }
+
+    <!--Таблица-->
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <table class="table  table-striped">
                 <thead class="thead-dark">
                     <tr>
