--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 </head>
 <body>
     @RenderBody()
+    @RenderSection("scripts")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/ajax")
     @Scripts.Render("~/bundles/bootstrap")
