Worked validation! Hallelujah!!!

--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -9,70 +9,11 @@
         Добавить
     </button>
 
-    <!-- Модальное окно -->
+    <!-- Таблица и модальное окно -->
     @using (Ajax.BeginForm("UpdateAdresses", new AjaxOptions { UpdateTargetId = "results" }))
     {
-        @Html.AntiForgeryToken()
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Добавление новой записи</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="col-md-12">
-                                <label for="country">* Страна</label>
-                                <input type="text" name="country" class="form-control" id="country" placeholder="Введите страну" data-rule="required">
-                            </div>
-                            <div class="col-md-12">
-                                <label for="city">* Город</label>
-                                <input type="text" name="city" class="form-control" id="city" placeholder="Введите город" data-rule="required">
-                            </div>
-                            <div class="col-md-12">
-                                <label for="street">Улица</label>
-                                <input type="text" name="street" class="form-control" id="street" placeholder="Введите улицу">
-                            </div>
-                            <div class="col-md-12">
-                                <label for="houseNumber">Номер дома</label>
-                                <input type="text" name="houseNumber" class="form-control" id="houseNumber" placeholder="Введите номер дома">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-                        <button type="submit" class="btn btn-primary">Сохранить</button>
-                    </div>
-                </div>
-            </div>
+        <div id="results" >
+            @Html.Partial("UpdateAdresses")
         </div>
     }
-
-    <!--Таблица-->
-    <div class="row">
-        <div class="col-md-12">
-            <table class="table  table-striped">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col"><p>Страна</p></th>
-                        <th scope="col"><p>Город</p></th>
-                        <th scope="col"><p>Улица</p></th>
-                        <th scope="col"><p>№ дома</p></th>
-                        <th scope="col"><p>Дата создания записи<p></th>
-                    </tr>
-                </thead>
-                <tbody id="results">
-                    @Html.Partial("UpdateAdresses")
-                </tbody>
-            </table>
-        </div>
-    </div>
 </div>
-
-@section Scripts{
-    @Scripts.Render("~/bundles/myjsval")
-}
-
