--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
     @RenderBody()
-    @RenderSection("scripts")
-    @Scripts.Render("~/bundles/jquery")
+
+
     @Scripts.Render("~/bundles/ajax")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
+   
 </body>
 </html>
