--- a/AddressBook/Views/Addresses/Index.cshtml
+++ b/AddressBook/Views/Addresses/Index.cshtml
@@ -27,26 +27,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Country)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Street)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HouseNumber)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AddressID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AddressID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AddressID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Country)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Street)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.HouseNumber)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.AddressID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.AddressID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.AddressID })
+            </td>
+        </tr>
+    }
 
 </table>
