--- a/AddressBook/Content/Site.css
+++ b/AddressBook/Content/Site.css
@@ -1,4 +1,12 @@
-﻿/*
+﻿.add_button {
+    display: block;
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    z-index: 2;
+}
+
+/*
 body {
     font-size: 13px;
     font-family: Verdana, Arial, Helvetica, Sans-Serif;
