Not done Capital letter

--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -13,5 +13,6 @@
         @Scripts.Render("~/bundles/ajax")
         @Scripts.Render("~/bundles/jqueryval")
         @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/bundles/MyScripts");
 </body>
 </html>
