--- a/AddressBook/Views/Home/EditorTemplates/Address.cshtml
+++ b/AddressBook/Views/Home/EditorTemplates/Address.cshtml
@@ -2,17 +2,17 @@
 
 <div class="col-md-12">
     <label class="control-label" for="Country">*Страна</label>
-    @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control capital-letter" } })
     @Html.ValidationMessageFor(model => model.Country, "", new { @class = "text-danger" })
 </div>
 <div class="col-md-12">
     <label class="control-label" for="Country">*Город</label>
-    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control capital-letter" } })
     @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
 </div>
 <div class="col-md-12">
     @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label" })
-    @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control capital-letter" } })
     @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
 </div>
 <div class="col-md-12">
