Capital letter done!

--- a/AddressBook/Views/Home/UpdateAddressesTable.cshtml
+++ b/AddressBook/Views/Home/UpdateAddressesTable.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AddressBook.Models.Address>
 
 <!--Таблица-->
-<table class="table  table-striped">
+<table class="table table-hover">
     <thead class="thead-dark">
         <tr>
             <th scope="col">@Html.DisplayNameFor(model => model.Country)</th>
