Added address editor

--- a/AddressBook/Views/Home/EditorTemplates/Address.cshtml
+++ b/AddressBook/Views/Home/EditorTemplates/Address.cshtml
@@ -1,5 +1,7 @@
 ﻿@model AddressBook.Models.Address
-
+<div style="display:none">
+    @Html.EditorFor(model => model.AddressID, new { htmlAttributes = new { @class = "form-control" } })
+</div>
 <div class="col-md-12">
     <label class="control-label" for="Country">*Страна</label>
     @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control capital-letter" } })
