--- a/AddressBook/Views/Home/UpdateAddressesTable.cshtml
+++ b/AddressBook/Views/Home/UpdateAddressesTable.cshtml
@@ -14,13 +14,17 @@
     <tbody>
         @for (int i = 0; i < Model.Count(); i++)
         {
-            <tr>
+            <tr class="edit-address">
+                <td style="display:none">@Model.ElementAt(i).AddressID</td>
                 <td>@Model.ElementAt(i).Country</td>
                 <td>@Model.ElementAt(i).City</td>
                 <td>@Model.ElementAt(i).Street</td>
                 <td>@Model.ElementAt(i).HouseNumber</td>
                 <td>@Html.DisplayFor(model => model.ElementAt(i).Date)</td>
+                <!--<td class="edit"><img  src="~/Images/pencil.png"></td>-->
             </tr>
         }
     </tbody>
 </table>
+
+@Scripts.Render("~/bundles/TableScripts")
