--- a/AddressBook/Views/Home/UpdateAddressesTable.cshtml
+++ b/AddressBook/Views/Home/UpdateAddressesTable.cshtml
@@ -21,6 +21,7 @@
             <td>@address.City</td>
             <td>@address.Street</td>
             <td>@address.HouseNumber</td>
+            <td style="display:none">@address.TypeBuildId</td>
             <td>@address.TypeBuilding.TypeBuild</td>
             <td>@Html.DisplayFor(model => address.Date)</td>
             <!--<td class="edit"><img  src="~/Images/pencil.png"></td>-->
