--- a/AddressBook/Views/Home/EditorTemplates/Address.cshtml
+++ b/AddressBook/Views/Home/EditorTemplates/Address.cshtml
@@ -22,8 +22,15 @@
     @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control" } })
     @Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
 </div>
+<!--
 <div class="col-md-12">
     @Html.LabelFor(model => model.TypeBuildId, htmlAttributes: new { @class = "control-label" })
     @Html.EditorFor(model => model.TypeBuildId, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.ValidationMessageFor(model => model.TypeBuildId, "", new { @class = "text-danger" })
+</div>
+-->
+<div class="col-md-12">
+    @Html.LabelFor(model => model.TypeBuildId, htmlAttributes: new { @class = "control-label" })
+    @Html.DropDownList("BuildingId", ViewBag.Types as SelectList, new { @class = "form-control" })
     @Html.ValidationMessageFor(model => model.TypeBuildId, "", new { @class = "text-danger" })
 </div>
