--- a/AddressBook/Views/Home/EditorTemplates/Address.cshtml
+++ b/AddressBook/Views/Home/EditorTemplates/Address.cshtml
@@ -19,7 +19,7 @@
 </div>
 <div class="col-md-12">
     @Html.LabelFor(model => model.HouseNumber, htmlAttributes: new { @class = "control-label" })
-    @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.EditorFor(model => model.HouseNumber, new { htmlAttributes = new { @class = "form-control not-e" } })
     @Html.ValidationMessageFor(model => model.HouseNumber, "", new { @class = "text-danger" })
 </div>
 <!--
