--- a/AddressBook/Views/Home/UpdateAddressesTable.cshtml
+++ b/AddressBook/Views/Home/UpdateAddressesTable.cshtml
@@ -2,7 +2,7 @@
 
 <!--Таблица-->
 <table class="table table-hover">
-    <thead class="thead-dark">
+    <thead class="thead-dark fixed-head">
         <tr>
             <th scope="col">@Html.DisplayNameFor(model => model.Country)</th>
             <th scope="col">@Html.DisplayNameFor(model => model.City)</th>
